Started some basic objects for setting up ray tracing.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
 	<title>WebRayTracer</title>
+
+	<script src="objects/Vector.js"></script>
 	<script src="rayTracer.js"></script>
 </head>
 
