Separated each class into its own file.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <head>
 	<title>WebRayTracer</title>
 
+	<script src="objects/Camera.js"></script>
+	<script src="objects/Color.js"></script>
+	<script src="objects/Contact.js"></script>
+	<script src="objects/Environment.js"></script>
+	<script src="objects/Screen.js"></script>
 	<script src="objects/Vector.js"></script>
+
 	<script src="rayTracer.js"></script>
 </head>
 
