Fixed anti-blur code, and made output from camera show up on screen.
Added crisp scaling feature.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="objects/Screen.js"></script>
 	<script src="objects/Vector.js"></script>
 
+	<script src="Rendering.js"></script>
 	<script src="rayTracer.js"></script>
 </head>
 
