Got ray tracer to trace a sphere!

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<script src="objects/Color.js"></script>
 	<script src="objects/Contact.js"></script>
 	<script src="objects/Environment.js"></script>
+	<script src="objects/Geometries/Geometry.js"></script>
+	<script src="objects/Geometries/Sphere.js"></script>
 	<script src="objects/Screen.js"></script>
 	<script src="objects/Vector.js"></script>
 
