--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script src="objects/Contact.js"></script>
 	<script src="objects/Environment.js"></script>
 	<script src="objects/Geometries/Geometry.js"></script>
+	<script src="objects/Geometries/Plane.js"></script>
 	<script src="objects/Geometries/Sphere.js"></script>
 	<script src="objects/Screen.js"></script>
 	<script src="objects/Vector.js"></script>
