Added Triangle support!

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<script src="objects/Geometries/Geometry.js"></script>
 	<script src="objects/Geometries/Plane.js"></script>
 	<script src="objects/Geometries/Sphere.js"></script>
+	<script src="objects/Geometries/Triangle.js"></script>
 	<script src="objects/Screen.js"></script>
 	<script src="objects/Vector.js"></script>
 
